# journeychat

./: .gitignore  README.md  alembic.ini  api_endpoints_spec.md  index.html  journeychat.db  prestart.sh  pyproject.toml  restart.sh  run.sh
alembic/: env.py
alembic/versions/: 00966f40e1b2_add_tables.py  183dad371118_add_tables.py  268af8996ede_add_tables.py  29797ee23d10_add_tables.py  4c504a2dbe45_add_tables.py  8d1a62b1243d_add_tables.py  91127c583fa1_add_tables.py  c9335fede6c7_add_tables.py  e38334a83761_add_tables.py  e908edb6a395_add_message_table.py  f4da9d3bf229_add_tables.py  f744edfbfa6c_add_tables.py
frontend/: index.html
journeychat/: backend_pre_start.py  deps.py  initial_data.py  initialize_data.py  main.py  user_data.py  ws.py
journeychat/api/: deps copy.py  deps.py
journeychat/api/api_v1/: api.py
journeychat/api/api_v1/endpoints/: action.py  actions.py  auth.py  chat.py  member.py  message.py  other.py  recipe.py  room.py
journeychat/core/: auth.py  config.py
journeychat/crud/: __init__.py  base.py  crud_message.py  crud_room.py  crud_user.py
journeychat/db/: base.py  base_class.py  init_db.py  session.py
journeychat/models/: __init__.py  joined_rooms.py  message.py  room.py  room_members.py  user.py  user_rooms.py
journeychat/schemas/: __init__.py  message.py  note.py  room.py  schemas.py  user.py
journeychat/socketio/: __init__.py  app.py  security.py
tests/: test_journeychat.py
